--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 Flask==3.0.3
+gunicorn==23.0.0
 python-dotenv==1.0.1
 pydantic==2.8.2
 requests==2.32.3
@@ -7,4 +8,4 @@ gspread==6.1.2
 google-auth==2.34.0
 pandas==2.3.2
 pandas-ta==0.4.71b0
-gunicorn
+stripe==11.2.0
